--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: "findbugs"
 
 android {
     compileSdkVersion compileSdkVer
@@ -18,6 +19,27 @@ android {
     }
     lintOptions {
           abortOnError false
+    }
+}
+
+task findbugs(type: FindBugs,dependsOn:'assembleDebug') {
+
+    ignoreFailures= true
+    effort= "default"
+    reportLevel= "high"
+    println( "$project.buildDir")
+    classes = files("$project.buildDir/intermediates/classes")
+    source= fileTree("src/main/java/")
+    classpath= files()
+    reports{
+        xml.enabled=false
+        html.enabled=true
+        xml {
+            destination "$project.buildDir/findbugs.xml"
+        }
+        html{
+            destination "$project.buildDir/findbugs.html"
+        }
     }
 }
 
