--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     dependencies {
         classpath gradle_plugins.buildGradle
         classpath gradle_plugins.butterknife
+        classpath gradle_plugins.dexcount
         gradle_plugins.each { name, dependency -> classpath dependency }
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
