--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
 
 task findbugs(type: FindBugs,dependsOn:'assembleDebug') {
 
-    ignoreFailures= true
+    ignoreFailures= false
     effort= "default"
     reportLevel= "high"
     println( "$project.buildDir")
