--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ task findbugs(type: FindBugs,dependsOn:'assembleDebug') {
 
     ignoreFailures= false
     effort= "default"
-    reportLevel= "high"
+    reportLevel= "low"
     println( "$project.buildDir")
     classes = files("$project.buildDir/intermediates/classes")
     source= fileTree("src/main/java/")
