--- a/build.gradle
+++ b/build.gradle
@@ -4,24 +4,23 @@ apply from: 'check.gradle'
 buildscript {
     apply from: "${rootDir}/dependencies.gradle"
     repositories {
-        maven { url 'https://maven.google.com' }
+        google()
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath gradle_plugins.buildGradle
-        classpath gradle_plugins.butterknife
-        classpath gradle_plugins.dexcount
         gradle_plugins.each { name, dependency -> classpath dependency }
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
 allprojects {
     apply from: "${rootDir}/dependencies.gradle"
     repositories {
-        maven { url 'https://maven.google.com' }
+        google()
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         jcenter()
+        mavenCentral()
     }
 }
 
