--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
-apply plugin: "findbugs"
+apply plugin: 'kotlin-android'
 apply plugin: 'com.getkeepsafe.dexcount'
+
+apply from: "${rootDir}/findbugs.gradle"
 
 android {
     compileSdkVersion compileSdkVer
@@ -23,38 +25,19 @@ android {
     }
 }
 
-task findbugs(type: FindBugs, dependsOn: 'assembleDebug') {
-
-    ignoreFailures = true
-    effort = "default"
-    reportLevel = "low"
-    println("$project.buildDir")
-    classes = files("$project.buildDir/intermediates/classes")
-    source = fileTree("src/main/java/")
-    classpath = files()
-    reports {
-        xml.enabled = false
-        html.enabled = true
-        xml {
-            destination "$project.buildDir/findbugs.xml"
-        }
-        html {
-            destination "$project.buildDir/findbugs.html"
-        }
-    }
-}
-
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile libraries.mosbyMVP
-    compile libraries.supportAppCompat
-    compile libraries.supportDesign
-    compile libraries.constraintLayout
-    compile libraries.butterknife
-    compile libraries.devLog
-    compile libraries.rxJava
-    compile libraries.rxAndroid
-    annotationProcessor libraries.butterknifeCompiler
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation libraries.mosbyMVP
+    implementation libraries.kotlin
+    implementation libraries.supportAppCompat
+    implementation libraries.supportDesign
+    implementation libraries.constraintLayout
 
-    compile 'com.github.zhaokaiqiang.klog:library:1.6.0'
+    implementation libraries.devLog
+
+    implementation libraries.rxJava
+    implementation libraries.rxAndroid
+
+    implementation libraries.butterknife
+    annotationProcessor libraries.butterknifeCompiler
 }
