--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     implementation libraries.constraintLayout
 
     implementation libraries.devLog
-    implementation libraries.devEncode
+//    implementation libraries.devEncode
 
     implementation libraries.rxJava
     implementation libraries.rxAndroid
